# spaceSaga

./: .gitignore  CMakeLists.txt  README.md  makefile  mingwBuild.bat  msvcBuild.bat  vcpkg.json
src/: Bullet.c  Bullet.h  Collision.c  Collision.h  Explosion.c  Explosion.h  Invader.c  Invader.h  Menu.h  Player.c  Player.h  Turret.c  Turret.h  Utilities.c  Utilities.h  main.c  menu.c  windowSize.h
